--- a/style.css
+++ b/style.css
@@ -1,8 +1,36 @@
 h1, p {
     display: inline-block;
+    padding: 0%;
+    /* margin: 0%; */
 }
+h2 {
+    margin-top: 0%;
+    margin-bottom: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+}
+  /* #p3 {
+    float:right;
+    margin-top: 4%;
+    margin-left: 30%;
+    margin-bottom: 0%;
+    /* margin-bottom: 0%;
+    padding-bottom: 0%;  
+  }*/
+  /* #forgot {
+      float: right;
+      margin-top: 4%;
+      margin-right: 0%;
+  } */
+    
 .p1 {
     float:right ;
+    margin:4px;
+    padding-top: 8px;
+}
+#p2 {
+    margin-top: 0%;
+    padding: 0%;
 }
 .header {
     background-color:hsl(220deg 41% 43%);
@@ -12,7 +40,7 @@ h1, p {
 }
 .leftcontent {
     float: left;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     width: 50%;
     padding-top: 1%;
 }
@@ -29,7 +57,7 @@ h1, p {
 }
 #button {
     padding: 1% 4%;
-    background-color: green;
+    background-color: hsl(216deg 41% 44%);
     color: white;
 }
 #fName, #lName {
